# example-bank

./: Dockerfile  README.md  compose.env  docker-compose.infra.yml  docker-compose.yml  pyproject.toml  run.env
.github/workflows/: tests.yml
bank/: config.py  di.py  domain.py  infra.py  messages.py  run_executor.py
bank/api/: __init__.py  _base.py  account.py  index.py  transfer.py
bank/domain/: __init__.py
bank/event_sourcing/: repository.py
bank/handlers/: commands.py  common.py  events.py  queries.py  repositories.py
tests/: conftest.py  test_api.py
