[tool.poetry]
name = "example-bank"
version = "0.1.0"
description = ""
authors = ["Martin Vielsmaier <martin@vielsmaier.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
depeche-db = "^0.6.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
explicit-di = "^0.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-watch = "^4.2.0"
mypy = "^1.6.1"
black = "^23.10.0"
ruff = "^0.1.1"
python-language-server = "^0.36.2"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"
fix = true
select = [
    # pycodestyle checks.
    "E",
    "W",
    # pyflakes checks.
    "F",
    # flake8-bugbear checks.
    "B0",
    # flake8-comprehensions checks.
    "C4",
    # isort
    "I",
]
ignore = [
    "E501",  # line too long -> enforced by black
]
[tool.ruff.per-file-ignores]
"*/tests/**.py" = ["B018"]  # allow useless var access in tests
